--- a/AUTHORS
+++ b/AUTHORS
@@ -525,3 +525,4 @@ pkcs <pkcs@gmx.com>
 Saúl Ibarra Corretgé <saghul@gmail.com>
 silverwind <silv3rwind@gmail.com>
 Steven R. Loomis <srl@icu-project.org>
+James M Snell <jasnell@gmail.com>
