deps: update libuv to 0.10.36

--- a/deps/uv/AUTHORS
+++ b/deps/uv/AUTHORS
@@ -132,3 +132,6 @@ Javier Hernández <jhernandez@emergya.com>
 Tonis Tiigi <tonistiigi@gmail.com>
 Michael Hudson-Doyle <michael.hudson@linaro.org>
 Helge Deller <deller@gmx.de>
+Logan Rosen <loganrosen@gmail.com>
+Kenneth Perry <thothonegan@gmail.com>
+Michael Penick <michael.penick@datastax.com>
